Split some parts into partials
Spliting the home screen into partials for code reusability and better
organisation.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -79,8 +79,8 @@ div.container a.brand {
 .quickpost
 {
     height: 35px;
-    width: 620px;
-    resize: none;
+    width: 620px!important;
+    resize: none!important;
 }
 
 .postholder
