--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -48,7 +48,7 @@ div.container a.brand {
 
 .profileleft
 {
-    //border-right: solid 1px #EBEBEB!important;
+    /*border-right: solid 1px #EBEBEB!important;*/
     height: auto;
     width: 200px;
     padding-left: 25px!important;
